--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naga303 Official</title>
+	<meta name="description" content="NAGA303 LOGIN | NAGA303 DAFTAR">
+    <meta name='robots' content='index, follow' />
+    <meta name="author" content="Naga303">
+	<meta name="keywords" content="naga303, naga303 login, naga303 daftar"/>
+	<link rel="amphtml" href="https://pub-3ca4f5a9404d47a8883421ab44771866.r2.dev/index.html">
+    <meta name="google-site-verification" content="YcV3Gy1fG4K1TNgZS08wHR-rdGoBajsWpEmPgLw0w_o" />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -37,6 +43,18 @@
 <body>
     <h1>Naga303 Official</h1>
     <p>Selamat datang di situs Naga303 Official. Untuk melanjutkan, silahkan klik tombol di bawah ini.</p>
-    <button onclick="location.href='https://contoh-link-lanjutan.com'">Lanjutkan</button>
+    <button onclick="location.href='https://cutt.ly/4wSVsMg7'">DAFTAR</button>
+	<button onclick="location.href='https://pub-3ca4f5a9404d47a8883421ab44771866.r2.dev/index.html'">LOGIN</button>
+	<div style="display: none;">
+<a href="https://direct.me/naga303"></a>
+<a href="https://direct.me/slotboya"></a>
+<a href="https://direct.me/slot-gacor-hari-ini"></a>
+<a href="https://elizagwendalyn.com"></a>
+<a href="https://update.or.id/"></a>
+<a href="https://opendata.dairikab.go.id/uploads/user/2023-12-27-210434.817662slotgacor.html/"></a>
+<a href="http://data.nsk.hr/uploads/user/2023-12-27-194710.992817slotgacor.html/"></a>
+<a href="https://data.health.gov.lk/uploads/user/2023-12-27-202651.814550slotgacor.html/"></a>
+<a href="https://slotboyagacor.org/"></a>
+</div>
 </body>
 </html>
